# a0-betatest

./: CLAUDE.md  CONTRIBUTING.md  HMMM.md  MODULES.md  README.md  REBUILD_PLAN.md  _logging_legacy.py  contract.py  design_guidelines.json  index.html  model_adapter.py  pyproject.toml  replit.md  router.py  state.py  tailwind.config.ts  vite.config.ts
a0/: a0.py  (+14 more)
backend/: api_extensions.py  api_tools_mcp_skills.py  app_settings.py  crypto_vault.py  db.py  living_spec.py  models.py  pyproject.toml  readme_writer.py  requirements.txt  server.py
backend/a0p_skills/: SKILL.md  __init__.py  boundaries_runner.py  capabilities_runner.py  contracts.py  frontend_module_build_runner.py  module_build_runner.py  ratios_runner.py  test_build_runner.py
backend/agents/: __init__.py  routes.py  schema.py  store.py
backend/auth/: __init__.py
backend/interdependent_lib/: __init__.py  ucns_bridge.py
backend/interdependent_lib/_msdmd/: SKILL.md  __init__.py  parser.py  runner.py
backend/interdependent_lib/aimmh/: __init__.py  patterns.py
backend/interdependent_lib/carrier/: __init__.py  adjacency.py  gonal.py  mirror.py  registry.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  emergent_provider.py  gemini_provider.py  openai_provider.py  xai_provider.py
backend/skills/: __init__.py  registry.py  sync.py
backend/tests/: backend_test.py  conftest.py  test_auth_and_extensions.py  test_zfae_api_sentinels.py  test_zfae_three_core_sentinels.py
backend/tools/: __init__.py  builtin.py  gated_invoke.py  mcp_relay.py  mcp_server.py  registry.py  webhook.py
(+691 files in other folders)
